<?xml version="1.0" encoding="utf-8"?><!-- This linear layout contains a single item displayed in the MainActivity -->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/cardElevation"
    android:padding="@dimen/recyclerview_padding"
    card_view:cardBackgroundColor="@color/colorLightPrimary"
    card_view:cardCornerRadius="@dimen/cardCornerRadius"
    card_view:contentPadding="@dimen/cardContentPadding">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:context="com.example.lucian.mystoryteller.MainActivity">

        <TextView
            android:id="@+id/recyclerview_content_name"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/recyclerview_content_padding"
            android:textAlignment="center"
            android:textColor="@android:color/primary_text_light"
            tools:text="@string/recyclerview_content_name" />

        <TextView
            android:id="@+id/recyclerview_content_birthday"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recyclerview_content_name"
            android:gravity="center"
            android:paddingBottom="@dimen/recyclerview_content_padding"
            android:textAlignment="center"
            android:textColor="@android:color/primary_text_light"
            tools:text="@string/recyclerview_content_birthday" />

        <TextView
            android:id="@+id/recyclerview_content_gender"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recyclerview_content_birthday"
            android:gravity="center"
            android:paddingBottom="@dimen/recyclerview_content_padding"
            android:textAlignment="center"
            android:textColor="@android:color/primary_text_light"
            tools:text="@string/recyclerview_content_gender" />

        <TextView
            android:id="@+id/recyclerview_content_salary"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recyclerview_content_gender"
            android:gravity="center"
            android:paddingBottom="@dimen/recyclerview_content_padding"
            android:textAlignment="center"
            android:textColor="@android:color/primary_text_light"
            tools:text="@string/recyclerview_content_salary" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>


